fixed spacing between popular searches

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ form button{
 .container2{
     justify-content: space-between;
     display: flex;
-    width: 45%;
+    width: 50%;
     height: 20vh;
     padding-left: 20px;
 }
